--- a/package.json
+++ b/package.json
@@ -19,11 +19,16 @@
   },
   "devDependencies": {
     "babel-eslint": "^7.1.1",
+    "bulma": "^0.3.1",
     "eslint": "^3.13.1",
     "eslint-config-samtgarson": "^0.0.5",
     "eslint-plugin-html": "^1.7.0",
     "eslint-plugin-promise": "^3.4.0",
+    "font-awesome": "^4.7.0",
+    "node-sass": "^4.5.0",
     "nodemon": "^1.11.0",
+    "pug": "^2.0.0-beta11",
+    "sass-loader": "^5.0.1",
     "xo": "^0.17.1"
   },
   "main": "server.js",
