--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Sam Garson <samtgarson@gmail.com>",
   "private": false,
   "scripts": {
-    "dev": "node --harmony-async-await server.js",
+    "dev": "nodemon --harmony-async-await server.js",
     "build": "nuxt build",
     "start": "NODE_ENV=production node server.js",
     "precommit": "npm run lint",
@@ -13,9 +13,11 @@
   },
   "dependencies": {
     "axios": "^0.15.3",
+    "github-oauth": "^0.2.2",
     "micro": "^6.2.1",
     "micro-route": "^2.2.0",
-    "nuxt": "latest"
+    "nuxt": "latest",
+    "pify": "^2.3.0"
   },
   "devDependencies": {
     "babel-eslint": "^7.1.1",
