Fetch user from github

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Sam Garson <samtgarson@gmail.com>",
   "private": false,
   "scripts": {
-    "dev": "nodemon --harmony-async-await server.js",
+    "dev": "nodemon --harmony server.js",
     "build": "nuxt build",
     "start": "NODE_ENV=production node server.js",
     "precommit": "npm run lint",
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "axios": "^0.15.3",
+    "github": "^8.2.1",
     "github-oauth": "^0.2.2",
     "micro": "^6.2.1",
     "micro-route": "^2.2.0",
