--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "babel-eslint": "^7.1.1",
     "bulma": "^0.3.1",
     "eslint": "^3.13.1",
-    "eslint-config-samtgarson": "^0.0.5",
+    "eslint-config-samtgarson": "^0.0.6",
     "eslint-plugin-html": "^1.7.0",
     "eslint-plugin-promise": "^3.4.0",
     "font-awesome": "^4.7.0",
@@ -64,6 +64,9 @@
       "html",
       "promise"
     ],
+    "rules": {
+      "camelcase": 0
+    },
     "parser": "babel-eslint"
   }
 }
