Use micro-starter build script to build server code

--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "author": "Sam Garson <samtgarson@gmail.com>",
   "private": false,
   "scripts": {
-    "dev": "nodemon --harmony server.js",
-    "build": "nuxt build",
-    "start": "NODE_ENV=production node --harmony server.js",
+    "dev": "node build --watch",
+    "build": "node build && nuxt build",
+    "start": "NODE_ENV=production node index.js",
     "precommit": "npm run lint",
     "test": "xo && ava",
     "test:spec": "ava",
@@ -15,6 +15,8 @@
   },
   "dependencies": {
     "axios": "^0.15.3",
+    "buffer-equal-constant-time": "^1.0.1",
+    "camelize": "^1.0.0",
     "cookie-session": "^2.0.0-alpha.3",
     "debounce": "^1.0.0",
     "dotenv": "^4.0.0",
@@ -23,7 +25,7 @@
     "in-mem": "^0.0.2-RC2",
     "micro": "^6.2.1",
     "micro-method-router": "^0.1.0",
-    "micro-route": "^2.2.0",
+    "micro-route": "samtgarson/micro-route",
     "micro-visualize": "^3.0.0",
     "now-logs": "^0.0.7",
     "nuxt": "latest",
@@ -31,12 +33,14 @@
   },
   "devDependencies": {
     "ava": "^0.18.1",
+    "babel-core": "^6.23.1",
     "babel-eslint": "^7.1.1",
     "babel-polyfill": "^6.23.0",
     "babel-preset-latest": "^6.22.0",
     "babel-preset-stage-2": "^6.22.0",
     "babel-register": "^6.23.0",
     "bulma": "^0.3.1",
+    "chalk": "^1.1.3",
     "eslint": "^3.13.1",
     "eslint-config-samtgarson": "^0.0.6",
     "eslint-plugin-html": "^1.7.0",
@@ -44,8 +48,10 @@
     "font-awesome": "^4.7.0",
     "node-sass": "^4.5.0",
     "nodemon": "^1.11.0",
+    "ora": "^1.1.0",
     "pug": "^2.0.0-beta11",
     "sass-loader": "^5.0.1",
+    "webpack": "2",
     "xo": "^0.17.1"
   },
   "now": {
