--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "ava": "^0.18.1",
     "babel-core": "^6.23.1",
     "babel-eslint": "^7.1.1",
+    "babel-loader": "^6.3.2",
     "babel-polyfill": "^6.23.0",
     "babel-preset-latest": "^6.22.0",
     "babel-preset-stage-2": "^6.22.0",
