--- a/package.json
+++ b/package.json
@@ -27,9 +27,12 @@
     "micro-method-router": "^0.1.0",
     "micro-route": "^2.2.1",
     "micro-visualize": "^3.0.0",
+    "moment": "^2.17.1",
+    "now-client": "^0.7.0",
     "now-logs": "^0.0.7",
     "nuxt": "latest",
-    "pify": "^2.3.0"
+    "pify": "^2.3.0",
+    "request": "^2.79.0"
   },
   "devDependencies": {
     "ava": "^0.18.1",
@@ -40,7 +43,7 @@
     "babel-preset-latest": "^6.22.0",
     "babel-preset-stage-2": "^6.22.0",
     "babel-register": "^6.23.0",
-    "bulma": "^0.3.1",
+    "bulma": "jgthms/bulma",
     "chalk": "^1.1.3",
     "eslint": "^3.13.1",
     "eslint-config-samtgarson": "^0.0.6",
@@ -59,7 +62,8 @@
     "env": {
       "GITHUB_CLIENT": "@ci_github_client",
       "GITHUB_SECRET": "@ci_github_secret",
-      "SECRET_KEY": "@ci_secret_key"
+      "SECRET_KEY": "@ci_secret_key",
+      "NOW_TOKEN": "@now_token"
     },
     "alias": "ci"
   },
