--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "moment": "^2.17.1",
     "now-client": "^0.7.0",
     "now-logs": "^0.0.7",
-    "nuxt": "latest",
+    "nuxt": "^0.9.9",
+    "paginate": "^0.2.0",
     "pify": "^2.3.0",
     "request": "^2.79.0"
   },
